--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
     "name": "next_pizza",
     "version": "0.1.0",
     "private": true,
+    "prisma": {
+        "schema": "./src/shared/lib/prisma/schema.prisma"
+    },
     "scripts": {
         "dev": "next dev",
         "build": "next build",
@@ -9,7 +12,9 @@
         "lint": "next lint",
         "lint:fix": "npm run lint:prettier && npm run lint:ts",
         "lint:ts": "eslint --fix .",
-        "lint:prettier": "prettier --write \"**/*.{ts,tsx,js,jsx}\""
+        "lint:prettier": "prettier --write \"**/*.{ts,tsx,js,jsx}\"",
+        "prisma:push": "npx prisma db push",
+        "prisma:studio": "npx prisma studio"
     },
     "dependencies": {
         "@radix-ui/react-checkbox": "^1.1.1",
@@ -32,6 +37,7 @@
         "zustand": "^4.5.5"
     },
     "devDependencies": {
+        "@prisma/client": "^5.18.0",
         "@types/node": "^22",
         "@types/react": "^18",
         "@types/react-dom": "^18",
@@ -43,6 +49,7 @@
         "eslint-plugin-prettier": "^5.2.1",
         "postcss": "^8",
         "prettier": "^3.3.3",
+        "prisma": "^5.18.0",
         "tailwindcss": "^3.4.10",
         "typescript": "^5"
     }
