--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@radix-ui/react-slot": "^1.1.0",
         "@types/bcrypt": "^5.0.2",
         "autoprefixer": "^10.4.20",
+        "axios": "^1.7.5",
         "bcrypt": "^5.1.1",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
@@ -43,7 +44,7 @@
         "zustand": "^4.5.5"
     },
     "devDependencies": {
-        "@prisma/client": "^5.18.0",
+        "@prisma/client": "^5.19.0",
         "@types/node": "^22",
         "@types/react": "^18",
         "@types/react-dom": "^18",
