--- a/.prettierrc
+++ b/.prettierrc
@@ -6,7 +6,7 @@
     "trailingComma": "all",
     "printWidth": 100,
     "tabWidth": 4,
-    "endOfLine": "lf",
+    "endOfLine": "crlf",
     "arrowParens": "always",
     "bracketSameLine": false
 }
