--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@radix-ui/react-select": "^2.1.1",
         "@radix-ui/react-slider": "^1.2.0",
         "@radix-ui/react-slot": "^1.1.0",
+        "@radix-ui/react-visually-hidden": "^1.1.0",
         "@types/bcrypt": "^5.0.2",
         "@types/qs": "^6.9.15",
         "autoprefixer": "^10.4.20",
@@ -34,7 +35,7 @@
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "lucide-react": "^0.429.0",
-        "next": "14.2.6",
+        "next": "^14.2.13",
         "qs": "^6.13.0",
         "react": "^18",
         "react-dom": "^18",
@@ -46,19 +47,19 @@
         "zustand": "^4.5.5"
     },
     "devDependencies": {
-        "@prisma/client": "^5.19.0",
+        "@prisma/client": "^5.20.0",
         "@types/node": "^22",
         "@types/react": "^18",
         "@types/react-dom": "^18",
         "@typescript-eslint/eslint-plugin": "^8.2.0",
         "eslint": "^8.57.0",
-        "eslint-config-next": "14.2.6",
+        "eslint-config-next": "^14.2.6",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-i18next": "^6.0.9",
         "eslint-plugin-prettier": "^5.2.1",
         "postcss": "^8",
         "prettier": "^3.3.3",
-        "prisma": "^5.18.0",
+        "prisma": "^5.20.0",
         "tailwindcss": "^3.4.10",
         "typescript": "^5"
     }
