--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "react-dom": "^18",
         "react-hot-toast": "^2.4.1",
         "react-use": "^17.5.1",
+        "sharp": "^0.33.5",
         "tailwind-merge": "^2.5.2",
         "tailwindcss-animate": "^1.0.7",
         "ts-node": "^10.9.2",
