--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,17 +30,39 @@
         "baseUrl": "." /* Specify the base directory to resolve non-relative module names. */,
         "paths": {
             /* Specify a set of entries that re-map imports to additional lookup locations. */
-            "@/*": ["./src/*"],
-            "@/app/*": ["./src/app/*"],
-            "@/screens/*": ["./src/screens/*"],
-            "@/widgets/*": ["./src/widgets/*"],
-            "@/features/*": ["./src/features/*"],
-            "@/entities/*": ["./src/entities/*"],
-            "@/shared/*": ["./src/shared/*"],
-            "@/api/*": ["./src/entities/api/*"],
-            "@/config/*": ["./src/config/*"],
-            "@/store/*": ["./src/shared/libs/store/*"],
-            "@/hooks/*": ["./src/shared/libs/hooks/*"]
+            "@/*": [
+                "./src/*"
+            ],
+            "@/app/*": [
+                "./src/app/*"
+            ],
+            "@/screens/*": [
+                "./src/screens/*"
+            ],
+            "@/widgets/*": [
+                "./src/widgets/*"
+            ],
+            "@/features/*": [
+                "./src/features/*"
+            ],
+            "@/entities/*": [
+                "./src/entities/*"
+            ],
+            "@/shared/*": [
+                "./src/shared/*"
+            ],
+            "@/api/*": [
+                "./src/entities/api/*"
+            ],
+            "@/config/*": [
+                "./src/config/*"
+            ],
+            "@/store/*": [
+                "./src/shared/libs/store/*"
+            ],
+            "@/hooks/*": [
+                "./src/shared/libs/hooks/*"
+            ]
         },
         // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
         // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
@@ -75,7 +97,7 @@
         // "mapRoot": "",                                    /* Specify the location where debugger should locate map files instead of generated locations. */
         // "inlineSources": true,                            /* Include source code in the sourcemaps inside the emitted JavaScript. */
         // "emitBOM": true,                                  /* Emit a UTF-8 Byte Order Mark (BOM) in the beginning of output files. */
-        "newLine": "crlf",                                /* Set the newline character for emitting files. */
+        "newLine": "crlf", /* Set the newline character for emitting files. */
         // "stripInternal": true,                            /* Disable emitting declarations that have '@internal' in their JSDoc comments. */
         // "noEmitHelpers": true,                            /* Disable generating custom helper functions like '__extends' in compiled output. */
         // "noEmitOnError": true,                            /* Disable emitting files if any type checking errors are reported. */
@@ -131,6 +153,13 @@
         ".next/types/**/*.ts",
         ".next/types/**/*.ts"
     ],
-    "exclude": ["node_modules"],
-    "extensions": ["ts", "tsx", "js", "jsx"]
+    "exclude": [
+        "node_modules"
+    ],
+    "extensions": [
+        "ts",
+        "tsx",
+        "js",
+        "jsx"
+    ]
 }
