--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "prisma:generate": "npx prisma generate",
         "prisma:push": "npx prisma db push",
         "prisma:studio": "npx prisma studio",
-        "prisma:seed": "npx prisma db seed"
+        "prisma:seed": "npx prisma db seed",
+        "postinstall": "prisma generate"
     },
     "dependencies": {
         "@radix-ui/react-checkbox": "^1.1.1",
