--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "postinstall": "prisma generate"
     },
     "dependencies": {
+        "@hookform/resolvers": "^3.9.1",
         "@radix-ui/react-checkbox": "^1.1.1",
         "@radix-ui/react-dialog": "^1.1.2",
         "@radix-ui/react-popover": "^1.1.1",
@@ -41,6 +42,7 @@
         "next": "^14.2.13",
         "qs": "^6.13.0",
         "react": "^18",
+        "react-dadata": "^2.23.3",
         "react-dom": "^18",
         "react-hook-form": "^7.53.2",
         "react-hot-toast": "^2.4.1",
@@ -49,6 +51,7 @@
         "tailwindcss-animate": "^1.0.7",
         "ts-node": "^10.9.2",
         "vaul": "^0.9.1",
+        "zod": "^3.23.8",
         "zustand": "^4.5.5"
     },
     "devDependencies": {
